--- a/packages/plugin-raydium/package.json
+++ b/packages/plugin-raydium/package.json
@@ -1,26 +1,29 @@
 {
-    "name": "@ai16z/plugin-raydium",
-    "version": "0.1.0",
-    "type": "module",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "scripts": {
-      "build": "tsup src/index.ts --format esm --dts",
-      "test": "vitest"
-    },
-    "dependencies": {
-      "@ai16z/eliza": "v0.1.5-alpha.5",
-      "@solana/web3.js": "^1.95.8",
-      "axios": "^1.7.2",
-      "bs58": "^6.0.0",
-      "viem": "^2.21.54"
-    },
-    "devDependencies": {
-      "@types/better-sqlite3": "^7.6.12",
-      "@types/node": "^20.13.0",
-      "@types/yargs": "^17.0.33",
-      "tsup": "^8.0.2",
-      "typescript": "^5.4.5",
-      "vitest": "^1.2.1"
-    }
+  "name": "@ai16z/plugin-raydium",
+  "version": "0.1.0",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsup src/index.ts --format esm --dts",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "@ai16z/eliza": "v0.1.5-alpha.5",
+    "@coral-xyz/anchor": "^0.30.1",
+    "@raydium-io/raydium-sdk": "1.3.1-beta.58",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.8",
+    "axios": "^1.7.2",
+    "bs58": "^6.0.0",
+    "viem": "^2.21.54"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/node": "^20.13.0",
+    "@types/yargs": "^17.0.33",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5",
+    "vitest": "^1.2.1"
   }
+}
