update: GAIANET Model and risk profile

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 AGENT_WALLET_PRIVATE_KEY=
 USER_WALLET_PRIVATE_KEY=
 RPC_URL=https://api.mainnet-beta.solana.com
+GAIANET_MODEL=llama8b
+GAIANET_SERVER_URL=https://llama8b.gaia.domains/v1
+GAIANET_EMBEDDING_MODEL=nomic-embed
+USE_GAIANET_EMBEDDING=TRUE
