--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ai16z/plugin-node": "v0.1.5-alpha.5",
     "@ai16z/plugin-solana": "v0.1.5-alpha.5",
     "@ai16z/plugin-starknet": "v0.1.5-alpha.5",
+    "amqplib": "^0.10.5",
     "better-sqlite3": "^11.5.0",
     "readline": "^1.3.0",
     "ws": "^8.18.0",
