--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsup --format esm --dts",
+    "build:packages": "pnpm -r --filter \"./packages/**\" build",
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all"
@@ -23,6 +24,7 @@
     "@ai16z/plugin-node": "v0.1.5-alpha.5",
     "@ai16z/plugin-solana": "v0.1.5-alpha.5",
     "@ai16z/plugin-starknet": "v0.1.5-alpha.5",
+    "@ai16z/plugin-raydium": "workspace:*",
     "amqplib": "^0.10.5",
     "better-sqlite3": "^11.5.0",
     "readline": "^1.3.0",
