--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,10 @@
     "checkJs": false,
     "noEmitOnError": false,
     "moduleDetection": "force",
-    "allowArbitraryExtensions": true
+    "allowArbitraryExtensions": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@ai16z/plugin-raydium": ["./packages/plugin-raydium/src"]
+    }
   }
 }
