--- a/packages/plugin-raydium/package.json
+++ b/packages/plugin-raydium/package.json
@@ -12,10 +12,12 @@
     "@ai16z/eliza": "v0.1.5-alpha.5",
     "@coral-xyz/anchor": "^0.30.1",
     "@raydium-io/raydium-sdk": "1.3.1-beta.58",
+    "@raydium-io/raydium-sdk-v2": "0.1.93-alpha",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.95.8",
     "axios": "^1.7.2",
     "bs58": "^6.0.0",
+    "decimal.js": "^10.4.3",
     "viem": "^2.21.54"
   },
   "devDependencies": {
